# calculator-mcp-server

./: .dockerignore  .env.example  .gcloudignore  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  QUICK_START.md  README.md  calculator_server.py  cloudbuild.yaml  deploy-to-cloud-run.ps1  deploy-to-cloud-run.sh  pyproject.toml  requirements.txt  run_doctests.sh  test.py
.vercel/: project.json
app/: config.py  main.py  prompts.py
app/middleware/: auth.py  logging.py  rate_limit.py
app/routes/: admin_routes.py  blog_routes.py  chat_routes.py  health_routes.py  history_routes.py  matrix_routes.py  sitemap_routes.py  solve_routes.py
app/schemas/: chat.py  matrix.py  solve.py
app/services/: blog_admin_service.py  blog_service.py  chat_service.py  math_service.py  matrix_service.py  openai_service.py  retention_service.py  solve_service.py  supabase_service.py  tool_registry.py
docs/: supabase_setup.md
test_docker_cache/: pyproject.toml
