[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "calculator-mcp-server"
version = "1.0.0"
description = "A server for complex mathematical calculations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "sympy>=1.14.0",
    "matplotlib>=3.10.6",
    "pydantic>=2.11.9",
    "uvicorn>=0.37.0",
    "fastapi>=0.118.0",
    "python-json-logger>=3.0.0",
    "openai>=1.109.1",
    "supabase>=2.22.0",
    "python-dotenv>=1.1.1",
    "docstring-parser>=0.17.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]
