[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-mcp-server"
version = "1.0.0"
description = "A server for complex mathematical calculations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "sympy>=1.13.0",
    "matplotlib",
    "pydantic>=2.10.0",
    "uvicorn>=0.37.0",
    "fastapi>=0.118.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]
